--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,8 +37,13 @@ exclude = [
 ]
 
 
+[tool.black]
+line-length = 100
+extend-exclude = ".*database/piccolo_migrations.*"
+
+
 [tool.ruff]
-line-length=100
+line-length = 100
 extend-exclude = [
     "database/piccolo_migrations",
 ]
