feat(discord): add duffelbag account creation

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -43,7 +43,7 @@ repos:
     rev: v0.16.4
     hooks:
       - id: slotscheck
-        name: Running slotscheck in all files.nal
+        name: Running slotscheck in all files.
         exclude: "piccolo_conf.py"
         additional_dependencies: [
           piccolo,
@@ -58,6 +58,6 @@ repos:
           orjson,
           # discord
           disnake,
-          "git+https://github.com/DisnakeCommunity/disnake-ext-components",
+          "git+https://github.com/DisnakeCommunity/disnake-ext-components.git@rewrite",
           "git+https://github.com/DisnakeCommunity/disnake-ext-plugins",
         ]
