feat: implement logging

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -53,6 +53,7 @@ repos:
           arkprts,
           asyncpg,
           argon2-cffi,
+          coloredlogs,
           # speedups
           uvloop,
           orjson,
