--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,14 +10,14 @@ readme = "README.md"
 python = "^3.10"
 python-dotenv = "^0.21.0"
 arkprts = {git = "https://github.com/thesadru/arkprts"}
-piccolo = {extras = ["postgres"], version = "^0.113.0"}
+piccolo = {git = "https://github.com/piccolo-orm/piccolo", extras = ["postgres"], tag = "1.0a2"}
 argon2-cffi = "^21.3.0"
 coloredlogs = "^15.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
 devtools = "^0.11.0"
-ruff = "^0.0.270"
+ruff = "^0.0.289"
 pre-commit = "^3.3.2"
 pyright = "^1.1.310"
 
@@ -122,6 +122,7 @@ ignore = [
     "RET508",
     "PLC0414",
     "S101",
+    "PGH003",
 ]
 
 unfixable = ["RET502", "RET503"]
