--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.11"
 python-dotenv = "^0.21.0"
 arkprts = {git = "https://github.com/thesadru/arkprts"}
 piccolo = {git = "https://github.com/piccolo-orm/piccolo", extras = ["postgres"], tag = "1.0a2"}
@@ -59,76 +59,38 @@ extend-exclude = ".*database/piccolo_migrations.*"
 
 
 [tool.ruff]
+target-version = "py311"
 line-length = 100
 extend-exclude = [
     "database/piccolo_migrations",
 ]
 
-select = [
-    "E",
-    "F",
-    "W",
-    "I",
-    "D",
-    "UP",
-    "YTT",
-    "ANN",
-    "S",
-    "BLE",
-    "FBT",
-    "B",
-    "C40",
-    "DTZ",
-    "T10",
-    "EM",
-    "ISC",
-    "G",
-    "PIE",
-    "T20",
-    "Q",
-    "RSE",
-    "RET",
-    "SIM",
-    "TCH",
-    "ARG",
-    "PGH",
-    "PLC",
-    "PLE",
-    "PLR",
-    "PLW",
-    "TRY",
-    "RUF",
-]
-# F403, F405 do not need to hate wildcard imports. Pyright can find undefined errors.
-# D105, not really any point in documenting magic methods.
-# D107, class docstr is in the class level, may change in future.
-# D203 and D211, D212 and D213 intentionally clash
-# ANN101, ANN102 ask for `self` and `cls` annotations, what?
-# RET505-RET508 does not allow for any branches where it is an elif and else after a return
-# PLC0414 doesn't support `import foo as foo` to reexport.
-# S101 doesn't allow assertions.
+select = ["ALL"]
 ignore = [
-    "F403",
-    "F405",
+    # `self` and `cls` do not need annotations.
+    "ANN101", "ANN102",
+    # Magic methods do not need documentation.
     "D105",
+    # Class docstrings are at the class level.
     "D107",
-    "D203",
-    "D213",
-    "ANN101",
-    "ANN102",
-    "RET505",
-    "RET506",
-    "RET507",
-    "RET508",
-    "PLC0414",
+    # We use assertions as an in-place alternative to `typing.cast`.
     "S101",
+    # Pyright error codes are obnoxiously long.
     "PGH003",
+    # TODO / HACK comments do not need to be flagged.
+    "FIX002", "FIX004",
+    # TODO comments do not need to have an author or issue specified.
+    "TD002", "TD003",
 ]
 
-unfixable = ["RET502", "RET503"]
 
 [tool.ruff.per-file-ignores]
 # T201: Allow printing in scripts.
-"scripts/*" = [
-    "T201",
-]
+"scripts/*" = ["T201"]
+# Wildcard imports are fine in __init__; more convenient than duplicating exports and maintaining them.
+"__init__.py" = ["F403", "F405"]
+# Code lying in wait for composite unique constraints.
+"database/populate.py" = ["ERA"]
+# `id` is a very common field name in models
+"raw_data/models/*" = ["A003"]
+"database/models/*" = ["A003"]
