--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ devtools = "^0.11.0"
 ruff = "^0.0.289"
 pre-commit = "^3.3.2"
 pyright = "^1.1.310"
+slotscheck = "^0.17.0"
 
 
 [tool.poetry.group.discord.dependencies]
