feat: update config

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ DISCORD_TOKEN=BINGUSDINGUS
 DISCORD_IS_PROD=false
 
 DB_URI=postgresql://user:pass@localhost:5432/duffelbag
+
+SUPERUSER_IDS=1234, 5678
