--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 python = "^3.11"
 python-dotenv = "^0.21.0"
 arkprts = {git = "https://github.com/thesadru/arkprts"}
-piccolo = {git = "https://github.com/piccolo-orm/piccolo", extras = ["postgres"], tag = "1.0a2"}
+piccolo = {version = "^1.1.1", extras = ["postgres"]}
 argon2-cffi = "^21.3.0"
 coloredlogs = "^15.0.1"
 
