--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
     "rapidfuzz>=3.10.1",
 ]
 
-[project.optional-dependencies]
+[dependency-groups]
 discord = [
     "hikari>=2.1.0",
     "hikari-ryoshu",
@@ -51,15 +51,9 @@ exclude = [
 ]
 reportMissingTypeStubs=false
 
-
-[tool.black]
-line-length = 100
-extend-exclude = ".*database/piccolo_migrations.*"
-
-
 [tool.ruff]
 target-version = "py311"
-line-length = 100
+line-length = 120
 extend-exclude = [
     "database/piccolo_migrations",
 ]
