--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "duffelbag"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.12"
 dependencies = [
     "argon2-cffi>=23.1.0",
     "arkprts",
@@ -38,7 +38,7 @@ dev-dependencies = [
 
 [tool.uv.sources]
 arkprts = { git = "https://github.com/thesadru/arkprts" }
-hikari-ryoshu = { git = "https://github.com/sharp-eyes/hikari-ryoshu" }
+hikari-ryoshu = { git = "https://github.com/sharp-eyes/hikari-ryoshu", branch = "refactor/parser" }
 
 [tool.pyright]
 pythonVersion = "3.11"
